--- a/client/public/index.html
+++ b/client/public/index.html
@@ -24,13 +24,13 @@
     <meta name="twitter:image" content="https://castkeepr.vercel.app/icon.png" />
     <meta name="twitter:site" content="@infinitehomie" />
     
-    <!-- Farcaster Frame metadata -->
-    <meta name="fc:frame" content="vNext" />
-    <meta name="fc:frame:image" content="https://castkeepr.vercel.app/icon.png" />
-    <meta name="fc:frame:image:aspect_ratio" content="1:1" />
-    <meta name="fc:frame:button:1" content="Open CastKeepr" />
-    <meta name="fc:frame:button:1:action" content="link" />
-    <meta name="fc:frame:button:1:target" content="https://castkeepr.vercel.app" />
+    <!-- Farcaster Frame metadata (FIXED: using property instead of name) -->
+    <meta property="fc:frame" content="vNext" />
+    <meta property="fc:frame:image" content="https://castkeepr.vercel.app/icon.png" />
+    <meta property="fc:frame:image:aspect_ratio" content="1:1" />
+    <meta property="fc:frame:button:1" content="Open CastKeepr" />
+    <meta property="fc:frame:button:1:action" content="link" />
+    <meta property="fc:frame:button:1:target" content="https://castkeepr.vercel.app" />
     
     <!-- Additional meta tags for better embed validation -->
     <meta name="robots" content="index, follow" />
