--- a/client/public/index.html
+++ b/client/public/index.html
@@ -24,14 +24,18 @@
     <meta name="twitter:image" content="https://castkeepr.vercel.app/icon.png" />
     <meta name="twitter:site" content="@infinitehomie" />
     
-    <!-- Farcaster Frame metadata (FIXED: using property instead of name) -->
-    <meta property="fc:frame" content="vNext" />
-    <meta property="fc:frame:image" content="https://castkeepr.vercel.app/icon.png" />
-    <meta property="fc:frame:button:1" content="Open CastKeepr" />
-    <meta property="fc:frame:button:1:action" content="link" />
-    <meta property="fc:frame:button:1:target" content="https://castkeepr.vercel.app" />
+   <!-- Replace your Farcaster Frame metadata section with this: -->
+
+   <!-- Farcaster Frame metadata -->
+<meta property="fc:frame" content="vNext" />
+<meta property="fc:frame:image" content="https://castkeepr.vercel.app/icon.png" />
+<meta property="fc:frame:post_url" content="https://castkeepr.vercel.app" />
+<meta property="fc:frame:button:1" content="Open CastKeepr" />
+<meta property="fc:frame:button:1:action" content="link" />
+<meta property="fc:frame:button:1:target" content="https://castkeepr.vercel.app" />
+<meta property="fc:frame:button:2" content="Follow @infinitehomie" />
     
-    <!-- Additional meta tags for better embed validation -->
+<!-- Additional meta tags for better embed validation -->
     <meta name="robots" content="index, follow" />
     <meta name="author" content="infinitehomie" />
     <meta name="keywords" content="Farcaster, casts, save, organize, social media, web3" />
